--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -5,6 +5,10 @@ body {
 }
  .header--main {
     font-weight: normal;
-    color: white;
+    color: #fff;
     font-size: 50px;
+ }
+ .link--cta {
+     color: aquamarine;
+     font-size: 16px;
  }
